<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calendarDatePickerBtn"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/calendar_date_picker_btn_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/spinnerDatePickerBtn"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/spinner_date_picker_btn_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarDatePickerBtn"/>

    <TextView
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/spinnerDatePickerBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/preview_date"/>

    <Button
        android:id="@+id/clockTimePickerBtn"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/clock_time_picker_btn_text"
        app:layout_constraintTop_toBottomOf="@id/dateDisplay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/spinnerTimePickerBtn"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/spinner_time_picker_btn_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clockTimePickerBtn"/>

    <TextView
        android:id="@+id/timeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/spinnerTimePickerBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/preview_time"/>
</android.support.constraint.ConstraintLayout>